# xdg-portal-settings-minimal

./: Cargo.toml  README.md
.github/workflows/: ci.yml
portal_setting/: Cargo.toml
portal_setting/src/: lib.rs
portal_setting_cli/: Cargo.toml
portal_setting_cli/src/: main.rs
portal_setting_client/: Cargo.toml
portal_setting_client/src/: main.rs
